Fix mint limit alignment. Move bg color to app home component.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,4 @@
+
 ion-toolbar {
   --background: none !important;
   background-color: transparent;
@@ -6,7 +7,7 @@ ion-toolbar {
 
 ion-content {
   --background: none !important;
-  background-color: white;
+  // background-color: white;
   // background: linear-gradient(180deg, #696969, #e3e3e3, #696969);
   // background-size: 600% 600%;
 
@@ -19,12 +20,12 @@ ion-content {
     // background-size: 400% 400%;
 
     // .css-selector {
-      background: linear-gradient(180deg, #f0f0f0, #949494);
-      background-size: 600% 600%;
+      // background: linear-gradient(180deg, #f0f0f0, #949494);
+      // background-size: 600% 600%;
 
-      -webkit-animation: AnimationName 30s ease infinite;
-      -moz-animation: AnimationName 30s ease infinite;
-      animation: AnimationName 30s ease infinite;
+      // -webkit-animation: AnimationName 30s ease infinite;
+      // -moz-animation: AnimationName 30s ease infinite;
+      // animation: AnimationName 30s ease infinite;
   // }
 
 }
